# oil

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 20250516_234006_initial_migration.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: health.py  oil.py
app/core/: config.py  dependencies.py  error_handlers.py  exceptions.py  security.py
app/db/: base.py
app/infrastructure/storage/: base_client.py  r2_client.py
app/models/: auth.py  error.py  oil.py  storage.py
app/repositories/: base_repository.py  oil_repository.py
app/services/: oil_service.py
app/utils/: jwt_utils.py  logging_utils.py
